--- a/index.html
+++ b/index.html
@@ -13,7 +13,35 @@
     <h5>Tituto h5</h5>
     <h6>Titulo h6</h6>
     <h2>Parrafos</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam distinctio, officiis possimus tenetur harum corporis numquam quia facere veniam, dolores corrupti animi consequuntur temporibus expedita nostrum. Distinctio maiores fuga facere.
+    <p>Lorem ipsum dolor sit <strong>amet consectetur adipisicing elit</strong> amet consectetur adipisicing elit. Aperiam distinctio, officiis possimus tenetur harum corporis numquam quia facere veniam, dolores corrupti animi consequuntur temporibus expedita nostrum. Distinctio maiores fuga facere.
     </p>
+    <h3>Hipervinculos</h3>
+    <a href="https://www.utpl.edu.ec">click aqui</a>
+    <a href="https://www.utpl.edu.ec" target="_blank">click aqui 2</a> 
+    <a href="secundaria/movies.html">Movies</a>
+    <p> <img src="img/esmil.jpeg" alt="ESMIL"></p>
+    <h4>Salto de linea</h4>
+    <br>
+    <h4>linea de división</h4>
+    <hr>
+    <p> <img src="img/esmil.jpeg" alt="ESMIL" width="10%"></p>
+    <p>validador</p>
+    <a href="https://validator.w3.org/" target="_blank">validador html</a>
+    <a href="https://www.htmlquick.com/es/" target="_blank">Html Quik</a>
+    <h2>Listas ordenadas</h2>
+    <ol>
+        <li>Juan</li>
+        <li>pedro</li>
+        <li>issac</li>
+    </ol>
+    <h2>Listas no ordenadas</h2>
+    <ul>
+        <li>mamá</li>
+        <li>papá</li>
+        <li>hermano</li>
+    </ul>
+    <h2>tablas</h2>
+    <table></table>
+
 </body>
 </html>
